--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.5",
+    "webfontloader": "^1.6.28"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@types/webfontloader": "^1.6.35"
   }
 }
