--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
+    "uuid": "^9.0.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
