--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5",
     "uuid": "^9.0.0",
