--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-beautiful-dnd": "^13.1.3",
@@ -16,6 +17,7 @@
     "@types/uuid": "^9.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "googleapis": "^105.0.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
